# reelcut

./: .gitignore  README.md  pyproject.toml
data/fixtures/: SOURCE.md  SOURCE_GOALS.md
scripts/: auto_batch_demo.py  compare_trackers.py  export_digit_crops.py  run_batch.py
src/reelcut/: __init__.py  __main__.py  batch.py  cache.py  clipcutter.py  config.py  debugviz.py  ffmpeg.py  numbers.py  pipeline.py  scoring.py  stitching.py  types.py  webapp.py  workflow_client.py
src/reelcut/static/: index.html
tests/: fixtures.py  test_batch.py  test_cache.py  test_cli.py  test_clients.py  test_clipcutter.py  test_e2e_stub.py  test_fallback.py  test_numbers.py  test_pipeline.py  test_reel_budget.py  test_scoring.py  test_stitching.py  test_webapp.py
workflows/: reelcut_tracking.json
