[project]
name = "reelcut"
version = "0.1.0"
description = "Auto highlight reel for kids' sports games — Roboflow Workflows + local orchestration"
requires-python = ">=3.11,<3.13"
dependencies = [
    "inference>=0.30",
    "numpy>=1.26",
    "imageio-ffmpeg>=0.5",
    "python-dotenv>=1.0",
    "rich>=13",
    "fastapi>=0.115.14",
    "uvicorn>=0.51.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reelcut"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
python-preference = "managed"
